--- a/Registry/View/Patient List/PatientSearchUserControl.xaml
+++ b/Registry/View/Patient List/PatientSearchUserControl.xaml
@@ -90,7 +90,7 @@
                 <TextBlock TextAlignment="Justify" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">И/Б</TextBlock>
                 <!--<Image Width="48" Height="48" Source="pack://application:,,,/Resources;component/Images/AddPatient48x48.png" />-->
             </Button>
-            <Button Grid.Column="6" ToolTip="Прикрепление документов" Padding="5" Margin="5" VerticalAlignment="Center" Background="White" Command="{Binding DocumentsCommand}">
+            <Button Grid.Column="6" ToolTip="Прикрепление документов" Padding="5" Margin="5" VerticalAlignment="Center" Background="White" Command="{Binding PersonDocumentsCommand}">
                 <Image Width="48" Height="48" Source="pack://application:,,,/Resources;component/Images/Attachments48x48.png" />
             </Button>
             <Button Grid.Column="7" ToolTip="Документы леч. диагн. процесса" Padding="5" Margin="5" VerticalAlignment="Center" Background="White" Command="{Binding PrintDocumentsCommand}">
