--- a/Registry/View/Patient List/PatientSearchUserControl.xaml
+++ b/Registry/View/Patient List/PatientSearchUserControl.xaml
@@ -57,10 +57,9 @@
                     <ContentControl HorizontalAlignment="Stretch" Content="{Binding PatientAssignmentListViewModel}" />
                 </xctk:SplitButton.DropDownContent>
             </xctk:SplitButton>
-            <xctk:SplitButton Grid.Column="2" Margin="2" VerticalAlignment="Center" Padding="3" Height="60" Width="60"
-                        Background="White" x:Name="ambulatoryCardButton" ToolTipService.IsEnabled="{Binding CurrentPatient.IsEmpty, Converter={StaticResource InverseBoolConverter}}">
-                <Button HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Content="{Binding CurrentPatient.AmbNumberString}" 
-                        IsEnabled="{Binding CurrentPatient.AmbNumberExist, Converter={StaticResource InverseBoolConverter}}" Command="{Binding CreateAmbCardCommand}"/>
+            <xctk:SplitButton Grid.Column="2" Margin="2" VerticalAlignment="Stretch" Padding="3" Height="60" Width="60"
+                              Background="White" x:Name="ambulatoryCardButton" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="{Binding AmbNumberButtonText}" Command="{Binding CreateAmbCardCommand}" 
+                              ToolTipService.IsEnabled="{Binding CurrentPatient.AmbNumberExist, Converter={StaticResource InverseBoolConverter}}" >
                 <!--<xctk:SplitButton.Resources>
                     <Style TargetType="{x:Type Popup}">
                         <Setter Property="Width" Value="{Binding ActualWidth, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type xctk:SplitButton}}}" />
@@ -72,28 +71,28 @@
                 </ToolTipService.ToolTip>
                 <xctk:SplitButton.DropDownContent>
                     <StackPanel Visibility="{Binding CurrentPatient.AmbNumberExist, Converter={StaticResource BooleanToVisibilityConverter}}">
-                        <Button Content="Печать титульного листа амбулаторной карты" Command="{Binding PrintAmbCardFirstList}"/>
-                        <Button Content="Печать листа госпитализации" Command="{Binding PrintPersonHospList}"/>
-                        <Button Content="Печать листа лучевой назгрузки" Command="{Binding PrintRadiationList}"/>
-                        <Button Content="Печать все листы амбулаторной карты" Command="{Binding PrintAmbCardFirstList}"/>
+                        <Button Padding="4" Content="Печать титульного листа амбулаторной карты" Command="{Binding PrintAmbCardFirstListCommand}"/>
+                        <Button Padding="4" Content="Печать листа госпитализации" Command="{Binding PrintPersonHospListCommand}"/>
+                        <Button Padding="4" Content="Печать листа лучевой назгрузки" Command="{Binding PrintRadiationListCommand}"/>
+                        <Button Padding="4" Content="Печать все листы амбулаторной карты" Command="{Binding PrintAllAmbCardCommand}"/>
                     </StackPanel>
                 </xctk:SplitButton.DropDownContent>
             </xctk:SplitButton>
-            <Button Grid.Column="4" ToolTip="Договора" Padding="5" Margin="5" VerticalAlignment="Center" Background="White" Command="{Binding ContractsCommand}">
+            <Button Grid.Column="4" ToolTip="Договора" Padding="5" Margin="5" VerticalAlignment="Center" Background="White" Command="{Binding ShowContractsCommand}">
                 <Image Width="48" Height="48" Source="pack://application:,,,/Resources;component/Images/Contract48x48.png" />
             </Button>
-            <Button Grid.Column="3" ToolTip="Случаи" Padding="5" Margin="5" VerticalAlignment="Center" Background="White" Height="60" Width="60" Command="{Binding VisitsCommand}">
+            <Button Grid.Column="3" ToolTip="Случаи" Padding="5" Margin="5" VerticalAlignment="Center" Background="White" Height="60" Width="60" Command="{Binding ShowVisitsCommand}">
                 <TextBlock TextAlignment="Justify" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">Случаи</TextBlock>
                 <!--<Image Width="48" Height="48" Source="pack://application:,,,/Resources;component/Images/AddPatient48x48.png" />-->
             </Button>
-            <Button Grid.Column="5" ToolTip="Истории болезни" Padding="5" Margin="5" VerticalAlignment="Center" Background="White" Height="60" Width="60" Command="{Binding CasesCommand}">
+            <Button Grid.Column="5" ToolTip="Истории болезни" Padding="5" Margin="5" VerticalAlignment="Center" Background="White" Height="60" Width="60" Command="{Binding ShowCasesCommand}">
                 <TextBlock TextAlignment="Justify" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">И/Б</TextBlock>
                 <!--<Image Width="48" Height="48" Source="pack://application:,,,/Resources;component/Images/AddPatient48x48.png" />-->
             </Button>
-            <Button Grid.Column="6" ToolTip="Прикрепление документов" Padding="5" Margin="5" VerticalAlignment="Center" Background="White" Command="{Binding PersonDocumentsCommand}">
+            <Button Grid.Column="6" ToolTip="Прикрепление документов" Padding="5" Margin="5" VerticalAlignment="Center" Background="White" Command="{Binding ShowPersonDocumentsCommand}">
                 <Image Width="48" Height="48" Source="pack://application:,,,/Resources;component/Images/Attachments48x48.png" />
             </Button>
-            <Button Grid.Column="7" ToolTip="Документы леч. диагн. процесса" Padding="5" Margin="5" VerticalAlignment="Center" Background="White" Command="{Binding PrintDocumentsCommand}">
+            <Button Grid.Column="7" ToolTip="Документы леч. диагн. процесса" Padding="5" Margin="5" VerticalAlignment="Center" Background="White" Command="{Binding ShowPrintDocumentsCommand}">
                 <Image Width="48" Height="48" Source="pack://application:,,,/Resources;component/Images/documentPrint48x48.png" />
             </Button>
             <TextBlock Grid.Column="8" Margin="7 0 0 0"  x:Name="watermark" Text="Поиск по имени, фамилии, отчеству, дате рождения или номерам СНИЛС и ЕМН" VerticalAlignment="Center">
