Added entities RecordTypeRoles, RecordTypeRolePermissions
Updated fields in RecordTypes, PersonStaffs
Implemented bindings in PersonContractsViewModel, ContractsViewModel

--- a/AdminTools/View/UserAccountView.xaml
+++ b/AdminTools/View/UserAccountView.xaml
@@ -59,7 +59,7 @@
                                  SelectedItem="{Binding SelectedPerson, Mode=TwoWay}"
                                  IconPlacement="Left"
                                  IconVisibility="Visible"
-                                 Provider="{Binding PersonSuggestionProvider}"
+                                 Provider="{Binding UserSuggestionProvider}"
                                  x:Name="searchUserTextBox" TabIndex="1">            
             <wpf:AutoCompleteTextBox.LoadingContent>
                 <StackPanel Orientation="Horizontal">                    
