--- a/MainLib/View/ContractControl.xaml
+++ b/MainLib/View/ContractControl.xaml
@@ -12,10 +12,15 @@
              MinHeight="610">
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
-        <DataTemplate x:Key="AutoCompleteTemplate">
+        <DataTemplate x:Key="PersonAutoCompleteTemplate">
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="{Binding Path=FullName}" Margin="2" FontWeight="Bold" />
                 <TextBlock Text="{Binding Path=BirthDate, StringFormat=dd-MM-yyyy}" Margin="2"/>
+            </StackPanel>
+        </DataTemplate>
+        <DataTemplate x:Key="RecordTypesAutoCompleteTemplate">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="{Binding Path=Name}" Margin="2" FontWeight="Bold" />
             </StackPanel>
         </DataTemplate>
     </UserControl.Resources>
@@ -48,22 +53,22 @@
         <TextBlock Grid.Row="2" Grid.Column="0" Text="Источник финансирования" Margin="7"/>
         <ComboBox Grid.Row="2" Grid.Column="1" Width="221" HorizontalAlignment="Left" Margin="5"
                   ItemsSource="{Binding FinancingSources}" DisplayMemberPath="Name" SelectedValuePath="Id" 
-                  SelectedValue="{Binding FinancingSourceId}"/>
+                  SelectedItem="{Binding SelectedFinancingSource}"/>
         <TextBlock Grid.Row="3" Grid.Column="0" Text="Ответственный за договор" Margin="7"/>
         <ComboBox Grid.Row="3" Grid.Column="1" Width="221" HorizontalAlignment="Left" Margin="5"
                   ItemsSource="{Binding Registrators}" DisplayMemberPath="Name" SelectedValuePath="Id" 
-                  SelectedValue="{Binding RegistratorId}"/>
+                  SelectedItem="{Binding SelectedRegistrator}"/>
         
         <TextBlock Grid.Row="4" Grid.Column="0" Text="Заказчик" Margin="7"/>
         <wpf:AutoCompleteTextBox Grid.Row="4" Grid.Column="1" Margin="5"
                                  Watermark="Введите Ф.И.О. заказчика для поиска в МИС..."
                                  DisplayMember="FullName"
-                                 ItemTemplate="{StaticResource AutoCompleteTemplate}"
-                                 SelectedItem="{Binding SelectedPerson, Mode=TwoWay}"
+                                 ItemTemplate="{StaticResource PersonAutoCompleteTemplate}"
+                                 SelectedItem="{Binding SelectedClient, Mode=TwoWay}"
                                  IconPlacement="Left"
                                  IconVisibility="Visible"
                                  Provider="{Binding PersonSuggestionProvider}"
-                                 x:Name="searchClient" TabIndex="1">
+                                 x:Name="searchClient">
             <wpf:AutoCompleteTextBox.LoadingContent>
                 <StackPanel Orientation="Horizontal">
                     <Image gif:ImageBehavior.AnimatedSource="pack://application:,,,/Resources;component/Images/Loading16x16.gif" Height="16" Width="16" HorizontalAlignment="Center" VerticalAlignment="Center" />
@@ -76,12 +81,12 @@
         <wpf:AutoCompleteTextBox Grid.Row="5" Grid.Column="1" Margin="5"
                                  Watermark="Введите Ф.И.О. потребителя для поиска в МИС..."
                                  DisplayMember="FullName"
-                                 ItemTemplate="{StaticResource AutoCompleteTemplate}"
-                                 SelectedItem="{Binding SelectedPerson, Mode=TwoWay}"
+                                 ItemTemplate="{StaticResource PersonAutoCompleteTemplate}"
+                                 SelectedItem="{Binding SelectedConsumer, Mode=TwoWay}"
                                  IconPlacement="Left"
                                  IconVisibility="Visible"
                                  Provider="{Binding PersonSuggestionProvider}"
-                                 x:Name="searchConsumer" TabIndex="1">
+                                 x:Name="searchConsumer">
             <wpf:AutoCompleteTextBox.LoadingContent>
                 <StackPanel Orientation="Horizontal">
                     <Image gif:ImageBehavior.AnimatedSource="pack://application:,,,/Resources;component/Images/Loading16x16.gif" Height="16" Width="16" HorizontalAlignment="Center" VerticalAlignment="Center" />
@@ -93,18 +98,31 @@
         <GroupBox Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2">
             <StackPanel Orientation="Vertical" >
                 <TextBlock HorizontalAlignment="Center" Text="Услуги по договору" FontWeight="Bold"></TextBlock>
+                <RadioButton Content="Назначенные услуги" IsChecked="{Binding IsAssignRecordsChecked, Mode=TwoWay}" Margin="3"/>
+                <ListView ItemsSource="{Binding Assignments}" SelectedItem="{Binding SelectedAssignment, Mode=TwoWay}"
+                          Visibility="{Binding IsAssignRecordsChecked, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="5">
+                    <ListView.View>
+                        <GridView>
+                            <GridView.Columns>
+                                <GridViewColumn x:Name="Date" Header="Дата" DisplayMemberBinding="{Binding Path=AssignDate}"></GridViewColumn>
+                                <GridViewColumn x:Name="Name" Header="Наименование услуги" DisplayMemberBinding="{Binding Path=RecordTypeName}"></GridViewColumn>
+                                <GridViewColumn x:Name="Cost" Header="Сумма" DisplayMemberBinding="{Binding Path=RecordTypeCost}"></GridViewColumn>
+                            </GridView.Columns>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
                 <RadioButton Content="Добавить новую услугу" IsChecked="{Binding IsNewRecordChecked, Mode=TwoWay}" Margin="3"/>
                 <StackPanel Orientation="Vertical" 
                             Visibility="{Binding IsNewRecordChecked, Converter={StaticResource BooleanToVisibilityConverter}}">
                     <wpf:AutoCompleteTextBox Grid.Row="4" Grid.Column="1" Margin="5"
                                      Watermark="Введите наименование услуги для поиска..."
                                      DisplayMember="RecordName"
-                                     ItemTemplate="{StaticResource AutoCompleteTemplate}"
+                                     ItemTemplate="{StaticResource RecordTypesAutoCompleteTemplate}"
                                      SelectedItem="{Binding SelectedRecord, Mode=TwoWay}"
                                      IconPlacement="Left"
                                      IconVisibility="Visible"
-                                     Provider="{Binding RecordSuggestionProvider}"
-                                     x:Name="searchRecord" TabIndex="1">
+                                     Provider="{Binding RecordTypesSuggestionProvider}"
+                                     x:Name="searchRecord">
                         <wpf:AutoCompleteTextBox.LoadingContent>
                             <StackPanel Orientation="Horizontal">
                                 <Image gif:ImageBehavior.AnimatedSource="pack://application:,,,/Resources;component/Images/Loading16x16.gif" Height="16" Width="16" HorizontalAlignment="Center" VerticalAlignment="Center" />
@@ -124,46 +142,32 @@
                         <TextBlock Grid.Row="0" Grid.Column="0" Text="Кол-во услуг" Margin="5"/>
                         <xctk:IntegerUpDown Grid.Row="0" Grid.Column="1" Value="1" Height="20" Increment="1" Maximum="100" Minimum="1" ParsingNumberStyle="Integer" TextAlignment="Left"/>
                         <TextBlock Grid.Row="1" Grid.Column="0" Text="Стоимость услуг" Margin="5"/>
-                        <TextBox Grid.Row="1" Grid.Column="1" Height="20"/>
-                    </Grid>               
-                                
-                </StackPanel>
-                <RadioButton Content="Назначенные услуги" IsChecked="{Binding IsAssignRecordsChecked, Mode=TwoWay}" Margin="3"/>
-                <ListView ItemsSource="{Binding Assignments}" SelectedItem="{Binding SelectedAssignment, Mode=TwoWay}"
-                          Visibility="{Binding IsAssignRecordsChecked, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="5">
-                    <ListView.View>
-                        <GridView>
-                            <GridView.Columns>
-                                <GridViewColumn x:Name="Date" Header="Дата" DisplayMemberBinding="{Binding Path=AssignmentDate}"></GridViewColumn>
-                                <GridViewColumn x:Name="Name" Header="Наименование услуги" DisplayMemberBinding="{Binding Path=AssignmentRecordName}"></GridViewColumn>
-                                <GridViewColumn x:Name="Cost" Header="Сумма" DisplayMemberBinding="{Binding Path=AssignmentCost}"></GridViewColumn>
-                            </GridView.Columns>
-                        </GridView>
-                    </ListView.View>
-                    </ListView>
+                        <TextBox Grid.Row="1" Grid.Column="1" Height="20" IsReadOnly="True"/>
+                    </Grid>     
+                </StackPanel>                
             </StackPanel>
         </GroupBox>
 
         <StackPanel Orientation="Horizontal" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Margin="5,2">
-            <Button Command="{Binding AddRecord}" Margin="0,0,5,0" BorderThickness="0">
+            <Button Command="{Binding AddRecordCommand}" Margin="0,0,5,0" BorderThickness="0">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="pack://application:,,,/Resources;component/Images/Add24x24.png" Stretch="Uniform" Height="16" Width="16"/>
                     <TextBlock Text="Добавить услугу" Margin="2" TextDecorations="Underline"/>
                 </StackPanel>
             </Button>
-            <Button Command="{Binding RemoveRecord}" Margin="0,0,5,0" BorderThickness="0">
+            <Button Command="{Binding RemoveRecordCommand}" Margin="0,0,5,0" BorderThickness="0">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="pack://application:,,,/Resources;component/Images/Delete24x24.png" Stretch="Uniform" Height="16" Width="16"/>
                     <TextBlock Text="Удалить услугу" Margin="2" TextDecorations="Underline"/>
                 </StackPanel>
             </Button>
-            <Button Command="{Binding AddAppendix}" Margin="0,0,5,0" BorderThickness="0">
+            <Button Command="{Binding AddAppendixCommand}" Margin="0,0,5,0" BorderThickness="0">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="pack://application:,,,/Resources;component/Images/Add24x24.png" Stretch="Uniform" Height="16" Width="16"/>
                     <TextBlock Text="Новое доп. соглашение" Margin="2" TextDecorations="Underline"/>
                 </StackPanel>
             </Button>
-            <Button Command="{Binding RemoveAppendix}" Margin="0,0,5,0" BorderThickness="0">
+            <Button Command="{Binding RemoveAppendixCommand}" Margin="0,0,5,0" BorderThickness="0">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="pack://application:,,,/Resources;component/Images/Delete24x24.png" Stretch="Uniform" Height="16" Width="16"/>
                     <TextBlock Text="Удалить доп. соглашение" Margin="2" TextDecorations="Underline"/>
@@ -172,18 +176,18 @@
         </StackPanel>
         
         <ListView Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2"  Margin="5"
-                  ItemsSource="{Binding ContractItemsDTO}" SelectedItem="{Binding SelectedContractItem, Mode=TwoWay}">
+                  ItemsSource="{Binding ContractItems}" SelectedItem="{Binding SelectedContractItem, Mode=TwoWay}">
             <ListView.View>
                 <GridView>
                     <GridView.Columns>
                         <GridViewColumn x:Name="IsPaid">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
-                                    <CheckBox IsChecked="{Binding RecordIsPaid}"></CheckBox>
+                                    <CheckBox IsChecked="{Binding IsPaid}"></CheckBox>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
-                        <GridViewColumn x:Name="RecordName" Header="Наименование услуги" DisplayMemberBinding="{Binding Path=RecordName}"></GridViewColumn>
+                        <GridViewColumn x:Name="RecordName" Header="Наименование услуги" DisplayMemberBinding="{Binding Path=RecordTypeName}"></GridViewColumn>
                         <GridViewColumn x:Name="RecordCount" Header="Кол-во" DisplayMemberBinding="{Binding Path=RecordCount}"></GridViewColumn>
                         <GridViewColumn x:Name="RecordCost" Header="Сумма" DisplayMemberBinding="{Binding Path=RecordCost}"></GridViewColumn>
                         <GridViewColumn x:Name="PaymentType" Header="Тип оплаты">
@@ -191,7 +195,7 @@
                                 <DataTemplate>
                                     <ComboBox ItemsSource="{Binding PaymentTypes}" 
                                               DisplayMemberPath="Name" SelectedValuePath="Id" 
-                                              SelectedValue="{Binding PaymentTypeId}" />
+                                              SelectedItem="{Binding SelectedPaymentType}" />
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
@@ -200,7 +204,7 @@
             </ListView.View>
         </ListView>
 
-        <Button Grid.Row="9" Grid.Column="0" Command="{Binding SaveContract}" Margin="5" Background="White">
+        <Button Grid.Row="9" Grid.Column="0" Command="{Binding SaveContractCommand}" Margin="5" Background="White">
             <StackPanel Orientation="Horizontal">
                 <Image Source="pack://application:,,,/Resources;component/Images/Save_48x48.png" Stretch="Uniform" Height="24" Width="24"/>
                 <TextBlock Text="Сохранить договор" Margin="5"/>
@@ -216,13 +220,13 @@
             </xctk:DropDownButton.Content>
             <xctk:DropDownButton.DropDownContent>
                 <StackPanel Orientation="Vertical">
-                    <Button Command="{Binding PrintContract}" BorderThickness="0" HorizontalContentAlignment="Left">
+                    <Button Command="{Binding PrintContractCommand}" BorderThickness="0" HorizontalContentAlignment="Left">
                         <StackPanel Orientation="Horizontal" >
                             <Image Source="pack://application:,,,/Resources;component/Images/File_Word.png" Stretch="Uniform" Height="24" Width="24"/>
                             <TextBlock Text="Договор" Margin="5"/>
                         </StackPanel>
                     </Button>
-                    <Button Command="{Binding PrintAppendix}" BorderThickness="0" HorizontalContentAlignment="Left">
+                    <Button Command="{Binding PrintAppendixCommand}" BorderThickness="0" HorizontalContentAlignment="Left">
                         <StackPanel Orientation="Horizontal">
                             <Image Source="pack://application:,,,/Resources;component/Images/File_Word.png" Stretch="Uniform" Height="24" Width="24"/>
                             <TextBlock Text="Доп. соглашение к договору" Margin="5"/>
