--- a/MainLib/View/PersonContractsControl.xaml
+++ b/MainLib/View/PersonContractsControl.xaml
@@ -12,39 +12,55 @@
         </UserControl.Resources>
 
         <DockPanel>
-            <DockPanel DockPanel.Dock="Left" >
+            <DockPanel DockPanel.Dock="Left" MinWidth="250">
                 <StackPanel Orientation="Vertical" DockPanel.Dock="Top">
-                    <TextBlock Text="Период действия договоров" Margin="5" 
+                    <TextBlock Text="Период действия договоров" Margin="5" FontWeight="Bold"
                                 Visibility="{Binding ShowPeriod, Converter={StaticResource BooleanToVisibilityConverter}}"/>
-                    <StackPanel Orientation="Horizontal"
+                    <StackPanel Orientation="Horizontal" Margin="5,0"
                                 Visibility="{Binding ShowPeriod, Converter={StaticResource BooleanToVisibilityConverter}}">
                         <DatePicker Margin="2"/>
                         <TextBlock Text=" - " Padding="0,5,0,0"/>
                         <DatePicker Margin="2"/>
                     </StackPanel>
-                    <ComboBox ItemsSource="{Binding Registrators}" DisplayMemberPath="Name" SelectedValuePath="Id" 
-                                      SelectedItem="{Binding SelectedRegistrator}" />
-                    <TextBlock Text="{Binding ContractsCount}" Margin="5,0">Кол-во договоров</TextBlock>
-                    <TextBlock Text="{Binding ContractsSum}" Margin="5,0">Сумма договоров</TextBlock>
-                    <StackPanel Orientation="Horizontal">
+                <TextBlock Text="Ответственный" FontWeight="Bold" Margin="5"/>
+                <ComboBox ItemsSource="{Binding Registrators}" 
+                          DisplayMemberPath="Field" 
+                          SelectedValuePath="Value"
+                          SelectedValue="{Binding SelectedRegistratorId}" Margin="5,0"/>
+                <Grid Margin="5">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Row="0" Grid.Column="0" Text="Заключено договоров:  " HorizontalAlignment="Right" FontWeight="Bold"/>
+                    <TextBlock Grid.Row="1" Grid.Column="0" Text="на сумму:  " HorizontalAlignment="Right" FontWeight="Bold"/>
+                    <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding ContractsCount}" FontWeight="Bold"/>
+                    <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding ContractsSum}" FontWeight="Bold"/>
+                </Grid>
+                
+                <StackPanel Orientation="Horizontal">
                         <Button Command="{Binding AddContractCommand}" Margin="2" BorderThickness="0"
                                 Visibility="{Binding ShowPeriod, Converter={StaticResource BooleanToVisibilityConverter}}">
                             <StackPanel Orientation="Horizontal">
-                                <Image Source="pack://application:,,,/Resources;component/Images/Add24x24.png" Stretch="Uniform" Height="16" Width="16"/>
-                                <TextBlock Text="Добавить" Margin="2" TextDecorations="Underline"/>
+                                <Image Source="pack://application:,,,/Resources;component/Images/Add24x24.png" Stretch="Uniform" Height="20" Width="20"/>
+                                <TextBlock Text="Добавить" Margin="2" TextDecorations="Underline" FontSize="14"/>
                             </StackPanel>
                         </Button>
                         <Button Command="{Binding RemoveContractCommand}" Margin="2" BorderThickness="0"
                                 Visibility="{Binding ShowPeriod, Converter={StaticResource BooleanToVisibilityConverter}}">
                             <StackPanel Orientation="Horizontal">
-                                <Image Source="pack://application:,,,/Resources;component/Images/Delete24x24.png" Stretch="Uniform" Height="16" Width="16"/>
-                                <TextBlock Text="Удалить" Margin="2" TextDecorations="Underline"/>
+                                <Image Source="pack://application:,,,/Resources;component/Images/Delete24x24.png" Stretch="Uniform" Height="20" Width="20"/>
+                                <TextBlock Text="Удалить" Margin="2" TextDecorations="Underline" FontSize="14"/>
                             </StackPanel>
                         </Button>
                         <Button Command="{Binding PrintContractsCommand}" Margin="2,2,0,2" BorderThickness="0">
                             <StackPanel Orientation="Horizontal">
-                                <Image Source="pack://application:,,,/Resources;component/Images/documentPrint48x48.png" Stretch="Uniform" Height="16" Width="16"/>
-                                <TextBlock Text="Печать  " Margin="2" TextDecorations="Underline"/>
+                                <Image Source="pack://application:,,,/Resources;component/Images/documentPrint48x48.png" Stretch="Uniform" Height="20" Width="20"/>
+                                <TextBlock Text="Печать  " Margin="2" TextDecorations="Underline" FontSize="14"/>
                             </StackPanel>
                         </Button>
                     </StackPanel>
@@ -54,10 +70,20 @@
                             SelectedItem="{Binding SelectedContract, Mode=TwoWay}">
                     <ListView.View>
                         <GridView>
+                            <GridView.ColumnHeaderContainerStyle>
+                                <Style TargetType="{x:Type GridViewColumnHeader}">
+                                    <Setter Property="IsEnabled" Value="False"/>
+                                    <Style.Triggers>
+                                        <Trigger Property="IsEnabled" Value="False">
+                                            <Setter Property="TextElement.Foreground" Value="Black"/>
+                                        </Trigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </GridView.ColumnHeaderContainerStyle>
                             <GridView.Columns>
-                                <GridViewColumn x:Name="ContractNumber" Header="Договор" DisplayMemberBinding="{Binding Path=ContractNumber}"></GridViewColumn>
-                                <GridViewColumn x:Name="Client" Header="Заказчик" DisplayMemberBinding="{Binding Path=Client}"></GridViewColumn>
-                                <GridViewColumn x:Name="Cost" Header="Сумма" DisplayMemberBinding="{Binding Path=Cost}"></GridViewColumn>
+                                <GridViewColumn x:Name="ContractNumber" Header="№ дог." DisplayMemberBinding="{Binding Path=ContractNumber}"></GridViewColumn>
+                                <GridViewColumn x:Name="Client" Header="заказчик" DisplayMemberBinding="{Binding Path=Client}"></GridViewColumn>
+                                <GridViewColumn x:Name="Cost" Header="сумма" DisplayMemberBinding="{Binding Path=Cost}"></GridViewColumn>
                             </GridView.Columns>
                         </GridView>
                     </ListView.View>
