Minor changes in PersonVisitItemsList

--- a/MainLib/View/PersonVisitItemsListViews/PersonHierarchicalVisitsView.xaml
+++ b/MainLib/View/PersonVisitItemsListViews/PersonHierarchicalVisitsView.xaml
@@ -7,7 +7,6 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
@@ -16,9 +15,8 @@
 
             <Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"/>
             
-            <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding RecordTypeName}" />
+            <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Name}" />
             <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding DateTimePeriod}" />
-            <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding RoomName}" />
 
         </Grid>
     </HierarchicalDataTemplate>
